required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------
- Fixed anchor point of vertically stacked bar graphs

- Fixed TEXT property cannot be removed in the CLASS object. PHP/Mapscript (#3063)

- Fixed use of minfeaturesize auto with curved labels (#3151)

- Fixed msRemoveHashTable function when 2 keys have the same hash (#3146)

- Fix raster thread deadlock condition on posix/linux (#3145)

- Do not route thread debug output through msDebug which requires locking.


Version 5.6.0-beta2 (2009-10-01):
---------------------------------

- Fixed a couple of issues with Oracle Spatial and single pass queries (#3069)

- Added layer.resultsGetShape() to PHP MapScript for use with queries (#3069)

- Fixed query maps under the new single pass query process (#3069)

- WFS Client seg fault (OGR layer not opened) (#3136)

- Reduce use of sqrt() calls when determining distances (#3134)

- support axis ordering for WFS 1.1 (#2899)

- const changes to avoid warnings with msLoadProjectionString()

- mapgd.c: removed unused drawVectorSymbolGD() function.

- Use http://www.mapserver.org/mapserver namespace URI in XML mapfile 
  schema (#3142)

- Fixed issue with PHP_REGEX_INC in mapscript/php3/Makefile.in (#3078)


Version 5.6.0-beta1 (2009-09-23):
---------------------------------

- WMS 1.3.0 expects a CRS parameter instead of SRS (#2979)

- Allow users to set wms getmap and getlegendgraphic image format list (#455)

- Fixed MapScript shapeObj->toWkt() segfaults (#2763)

- add vertical bar charts to dynamic charting (#3128)

- Get the intersection points and labels #3101

- Fixed shp2img not to cause a crash when the map couldn't be loaded
