@@ -1040,12 +1040,12 @@ void msCircleDrawShadeSymbolAGG(symbolSetObj *symbolset, imageObj *image, pointO
         size = size*scalefactor;
     } else
         size = style->size*scalefactor;
-    size = MS_MAX(size, style->minsize);
-    size = MS_MIN(size, style->maxsize);
+    size = MS_MAX(size, (style->minsize*scalefactor));
+    size = MS_MIN(size, (style->maxsize*scalefactor));
 
     width = style->width*scalefactor;
-    width = MS_MAX(width, style->minwidth);
-    width = MS_MIN(width, style->maxwidth);
+    width = MS_MAX(width, (style->minwidth*scalefactor));
+    width = MS_MIN(width, (style->maxwidth*scalefactor));
 
     angle = (style->angle) ? style->angle : 0.0;
     angle_radians = angle*MS_DEG_TO_RAD;
@@ -1203,15 +1203,15 @@ void msDrawMarkerSymbolAGG(symbolSetObj *symbolset, imageObj *image, pointObj *p
         size = MS_NINT(size*scalefactor);
     } else
         size = MS_NINT(style->size*scalefactor);
-    size = MS_MAX(size, style->minsize);
-    size = MS_MIN(size, style->maxsize);
+    size = MS_MAX(size, (style->minsize*scalefactor));
+    size = MS_MIN(size, (style->maxsize*scalefactor));
     if (symbol->sizey)
         d = size/symbol->sizey; /* compute the scaling factor (d) on the unrotated symbol */
     else
         d = 1;
     width = MS_NINT(style->width*scalefactor);
-    width = MS_MAX(width, style->minwidth);
-    width = MS_MIN(width, style->maxwidth);
+    width = MS_MAX(width, (style->minwidth*scalefactor));
+    width = MS_MIN(width, (style->maxwidth*scalefactor));
 
     angle = (style->angle) ? style->angle : 0.0;
     angle_radians = angle*MS_DEG_TO_RAD;
@@ -1477,8 +1477,8 @@ void msImageTruetypePolylineAGG(symbolSetObj *symbolset, imageObj *image, shapeO
   }
   else
       size = style->size;
-  if(size*scalefactor > style->maxsize) scalefactor = (float)style->maxsize/(float)size;
-  if(size*scalefactor < style->minsize) scalefactor = (float)style->minsize/(float)size;
+  if(size*scalefactor > (style->maxsize*scalefactor)) scalefactor = (float)style->maxsize/(float)size;
+  if(size*scalefactor < (style->minsize*scalefactor)) scalefactor = (float)style->minsize/(float)size;
   gap = MS_ABS(symbol->gap)* (int) scalefactor;
   label.size = (size * scalefactor);
   // label.minsize = style->minsize; 
@@ -1571,12 +1571,12 @@ void msDrawLineSymbolAGG(symbolSetObj *symbolset, imageObj *image, shapeObj *p, 
         size = style->size;
 
     size = (size*scalefactor);
-    size = MS_MAX(size, style->minsize);
-    size = MS_MIN(size, style->maxsize);
+    size = MS_MAX(size, (style->minsize*scalefactor));
+    size = MS_MIN(size, (style->maxsize*scalefactor));
 
     width = (style->width*scalefactor);
-    width = MS_MAX(width, style->minwidth);
-    width = MS_MIN(width, style->maxwidth);
+    width = MS_MAX(width, (style->minwidth*scalefactor));
+    width = MS_MIN(width, (style->maxwidth*scalefactor));
     
     ox = style->offsetx * scalefactor;
     oy = style->offsety * scalefactor;
@@ -1760,12 +1760,12 @@ void msDrawShadeSymbolAGG(symbolSetObj *symbolset, imageObj *image, shapeObj *p,
         size = size*scalefactor;
     } else
         size = style->size*scalefactor;
-    size = MS_MAX(size, style->minsize);
-    size = MS_MIN(size, style->maxsize);
+    size = MS_MAX(size, (style->minsize*scalefactor));
+    size = MS_MIN(size, (style->maxsize*scalefactor));
 
     width = style->width*scalefactor;
-    width = MS_MAX(width, style->minwidth);
-    width = MS_MIN(width, style->maxwidth);
+    width = MS_MAX(width, (style->minwidth*scalefactor));
+    width = MS_MIN(width, (style->maxwidth*scalefactor));
 
     angle_radians = style->angle*MS_DEG_TO_RAD;
 
@@ -1979,8 +1979,8 @@ int msDrawTextAGG(imageObj* image, pointObj labelPnt, char *string,
         double size;
 
         size = label->size*scalefactor;
-        size = MS_MAX(size, label->minsize);
-        size = MS_MIN(size, label->maxsize);
+        size = MS_MAX(size, (label->minsize*scalefactor));
+        size = MS_MIN(size, (label->maxsize*scalefactor));
         outlinewidth = label->outlinewidth*scalefactor;
         shadowsizex = label->shadowsizex*scalefactor;
         shadowsizey = label->shadowsizey*scalefactor;
@@ -2069,8 +2069,8 @@ int msDrawTextLineAGG(imageObj *image, char *string, labelObj *label,
         char s[11]; /* UTF-8 characters can be up to 6 bytes wide, entities 10 (&thetasym;) */
 
         size = label->size*scalefactor;
-        size = MS_MAX(size, label->minsize);
-        size = MS_MIN(size, label->maxsize);
+        size = MS_MAX(size, (label->minsize*scalefactor));
+        size = MS_MIN(size, (label->maxsize*scalefactor));
         outlinewidth = label->outlinewidth*scalefactor;
         shadowsizex = label->shadowsizex*scalefactor;
         shadowsizey = label->shadowsizey*scalefactor;
