@@ -72,8 +72,8 @@ int msImagePixmapPolyline(symbolSetObj *symbolset, gdImagePtr img, shapeObj *p, 
         size = MS_NINT(size*scalefactor);
     } else
       size = MS_NINT(style->size*scalefactor);
-    size = MS_MAX(size, style->minsize);
-    size = MS_MIN(size, style->maxsize);
+    size = MS_MAX(size, (style->minsize*scalefactor));
+    size = MS_MIN(size, (style->maxsize*scalefactor));
 
     gap = MS_ABS(symbol->gap)* (int) scalefactor;  
 
@@ -600,12 +600,12 @@ static gdImagePtr createHatch(gdImagePtr img, int sx, int sy, rectObj *clip, sty
     size = style->size;
 
   size = MS_NINT(size*scalefactor);
-  size = MS_MAX(size, style->minsize);
-  size = MS_MIN(size, style->maxsize);
+  size = MS_MAX(size, (style->minsize*scalefactor));
+  size = MS_MIN(size, (style->maxsize*scalefactor));
 
   width = MS_NINT(style->width*scalefactor);
-  width = MS_MAX(width, style->minwidth);
-  width = MS_MIN(width, style->maxwidth);
+  width = MS_MAX(width, (style->minwidth*scalefactor));
+  width = MS_MIN(width, (style->maxwidth*scalefactor));
   gdImageSetThickness(hatch, width);
 
   /* normalize the angle (180 to 0, 0 is east, 90 is north 180 is west) */
@@ -1072,12 +1072,12 @@ void msCircleDrawLineSymbolGD(symbolSetObj *symbolset, gdImagePtr img, pointObj 
     size = style->size;
 
   size = MS_NINT(size*scalefactor);
-  size = MS_MAX(size, style->minsize);
-  size = MS_MIN(size, style->maxsize);
+  size = MS_MAX(size, (style->minsize*scalefactor));
+  size = MS_MIN(size, (style->maxsize*scalefactor));
 
   width = MS_NINT(style->width*scalefactor);
-  width = MS_MAX(width, style->minwidth);
-  width = MS_MIN(width, style->maxwidth);
+  width = MS_MAX(width, (style->minwidth*scalefactor));
+  width = MS_MIN(width, (style->maxwidth*scalefactor));
 
   if(style->symbol >= symbolset->numsymbols || style->symbol < 0) return; /* no such symbol, 0 is OK */
   if(fc < 0) return; /* nothing to do */
@@ -1284,12 +1284,12 @@ void msCircleDrawShadeSymbolGD(symbolSetObj *symbolset, gdImagePtr img, pointObj
     size = MS_NINT(size*scalefactor);
   } else
     size = MS_NINT(style->size*scalefactor);
-  size = MS_MAX(size, style->minsize);
-  size = MS_MIN(size, style->maxsize);
+  size = MS_MAX(size, (style->minsize*scalefactor));
+  size = MS_MIN(size, (style->maxsize*scalefactor));
 
   width = MS_NINT(style->width*scalefactor);
-  width = MS_MAX(width, style->minwidth);
-  width = MS_MIN(width, style->maxwidth);
+  width = MS_MAX(width, (style->minwidth*scalefactor));
+  width = MS_MIN(width, (style->maxwidth*scalefactor));
 
   angle = (style->angle) ? style->angle : 0.0;
   angle_radians = angle*MS_DEG_TO_RAD;
@@ -1504,12 +1504,12 @@ void msDrawMarkerSymbolGD(symbolSetObj *symbolset, gdImagePtr img, pointObj *p, 
     size = MS_NINT(size*scalefactor);
   } else
     size = MS_NINT(style->size*scalefactor);
-  size = MS_MAX(size, style->minsize);
-  size = MS_MIN(size, style->maxsize);
+  size = MS_MAX(size, (style->minsize*scalefactor));
+  size = MS_MIN(size, (style->maxsize*scalefactor));
 
   width = MS_NINT(style->width*scalefactor);
-  width = MS_MAX(width, style->minwidth);
-  width = MS_MIN(width, style->maxwidth);
+  width = MS_MAX(width, (style->minwidth*scalefactor));
+  width = MS_MIN(width, (style->maxwidth*scalefactor));
 
   angle = (style->angle) ? style->angle : 0.0;
   angle_radians = angle*MS_DEG_TO_RAD;
@@ -1748,12 +1748,12 @@ void msDrawLineSymbolGD(symbolSetObj *symbolset, gdImagePtr img, shapeObj *p, st
   /* if(size*scalefactor < style->minsize) scalefactor = (float)style->minsize/(float)size; */
   
   size = MS_NINT(size*scalefactor);
-  size = MS_MAX(size, style->minsize);
-  size = MS_MIN(size, style->maxsize);
+  size = MS_MAX(size, (style->minsize*scalefactor));
+  size = MS_MIN(size, (style->maxsize*scalefactor));
 
   width = MS_NINT(style->width*scalefactor);
-  width = MS_MAX(width, style->minwidth);
-  width = MS_MIN(width, style->maxwidth);
+  width = MS_MAX(width, (style->minwidth*scalefactor));
+  width = MS_MIN(width, (style->maxwidth*scalefactor));
 
   angle = (style->angle) ? style->angle : 0.0;
 
@@ -2025,12 +2025,12 @@ void msDrawShadeSymbolGD(symbolSetObj *symbolset, gdImagePtr img, shapeObj *p, s
       size = MS_NINT(size*scalefactor);
   } else
       size = MS_NINT(style->size*scalefactor);
-  size = MS_MAX(size, style->minsize);
-  size = MS_MIN(size, style->maxsize);
+  size = MS_MAX(size, (style->minsize*scalefactor));
+  size = MS_MIN(size, (style->maxsize*scalefactor));
 
   width = MS_NINT(style->width*scalefactor);
-  width = MS_MAX(width, style->minwidth);
-  width = MS_MIN(width, style->maxwidth);
+  width = MS_MAX(width, (style->minwidth*scalefactor));
+  width = MS_MIN(width, (style->maxwidth*scalefactor));
 
   angle = (style->angle) ? style->angle : 0.0;
   angle_radians = angle*MS_DEG_TO_RAD;
@@ -2882,8 +2882,8 @@ int msDrawTextGD(gdImagePtr img, pointObj labelPnt, char *string, labelObj *labe
     double size;
 
     size = label->size*scalefactor;
-    size = MS_MAX(size, label->minsize);
-    size = MS_MIN(size, label->maxsize);
+    size = MS_MAX(size, (label->minsize*scalefactor));
+    size = MS_MIN(size, (label->maxsize*scalefactor));
 
 #ifdef USE_GD_FT
     if(!fontset) {
@@ -3004,8 +3004,8 @@ int msDrawTextLineGD(gdImagePtr img, char *string, labelObj *label, labelPathObj
     char s[11]; /* UTF-8 characters can be up to 6 bytes wide, html entities 10 */
 
     size = label->size*scalefactor;
-    size = MS_MAX(size, label->minsize);
-    size = MS_MIN(size, label->maxsize);
+    size = MS_MAX(size, (label->minsize*scalefactor));
+    size = MS_MIN(size, (label->maxsize*scalefactor));
     shadowsizex = label->shadowsizex*scalefactor;
     shadowsizey = label->shadowsizey*scalefactor;
 
