@@ -1622,8 +1622,8 @@ void msPolylineLabelPathLineString(imageObj *img, shapeObj *p, int min_length, f
   }
 
   size = label->size*scalefactor;
-  size = MS_MAX(size, label->minsize);
-  size = MS_MIN(size, label->maxsize);
+  size = MS_MAX(size, (label->minsize*scalefactor));
+  size = MS_MIN(size, (label->maxsize*scalefactor));
 
   font = msLookupHashTable(&(fontset->fonts), label->font);
   if(!font) {
